objects/SME_Approval_Routing_Logic__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SME Act Wise CDH</fullName>
                </value>
                <value>
                    <fullName>SME Act Wise FSA</fullName>
                </value>
                <value>
                    <fullName>SME Anthem Flex Hour</fullName>
                </value>
                <value>
                    <fullName>SME Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>SME Blue Exchange (BX)</fullName>
                </value>
                <value>
                    <fullName>SME Bold</fullName>
                </value>
                <value>
                    <fullName>SME CCMU</fullName>
                </value>
                <value>
                    <fullName>SME Claims</fullName>
                </value>
                <value>
                    <fullName>SME Claims Retro</fullName>
                </value>
                <value>
                    <fullName>SME Benefit Booklets/Contracts</fullName>
                </value>
                <value>
                    <fullName>SME Data Interface Team (DIT)</fullName>
                </value>
                <value>
                    <fullName>SME DeCare</fullName>
                </value>
                <value>
                    <fullName>SME Dental</fullName>
                </value>
                <value>
                    <fullName>SME EAP</fullName>
                </value>
                <value>
                    <fullName>SME Enrollment and Billing (E/B)</fullName>
                </value>
                <value>
                    <fullName>SME Group Services</fullName>
                </value>
                <value>
                    <fullName>SME Health and Wellness Solutions</fullName>
                </value>
                <value>
                    <fullName>SME HealthEquity/WageWorks/FSA/COBRA</fullName>
                </value>
                <value>
                    <fullName>SME ID Cards</fullName>
                </value>
                <value>
                    <fullName>SME IHM</fullName>
                </value>
                <value>
                    <fullName>SME Implementations</fullName>
                </value>
                <value>
                    <fullName>SME Interplan</fullName>
                </value>
                <value>
                    <fullName>SME IT</fullName>
                </value>
                <value>
                    <fullName>SME JAA/NTS</fullName>
                </value>
                <value>
                    <fullName>SME Life and Disability</fullName>
                </value>
                <value>
                    <fullName>SME LITES CDH</fullName>
                </value>
                <value>
                    <fullName>SME Medical Benefits</fullName>
                </value>
                <value>
                    <fullName>SME Medical Benefits - NASCO Retro</fullName>
                </value>
                <value>
                    <fullName>SME Coordinated Care Model</fullName>
                </value>
                <value>
                    <fullName>SME Mercer Health Advantage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Department__c</fullName>
        <description>Test picklist created for cleanup. Usage will be decided later.</description>
        <label>SME Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>SME Act Wise CDH</fullName>
                </value>
                <value>
                    <fullName>SME Act Wise FSA</fullName>
                </value>
                <value>
                    <fullName>SME Anthem Flex Hour</fullName>
                </value>
                <value>
                    <fullName>SME Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>SME Benefit Booklets/Contracts</fullName>
                    <isActive>false</isActive>
                    <label>SME Benefit Booklets/Contracts</label>
                </value>
                <value>
                    <fullName>SME Blue Exchange (BX)</fullName>
                </value>
                <value>
                    <fullName>SME Bold</fullName>
                </value>
                <value>
                    <fullName>SME CCMU</fullName>
                </value>
                <value>
                    <fullName>SME Claims</fullName>
                </value>
                <value>
                    <fullName>SME Claims Retro</fullName>
                </value>
                <value>
                    <fullName>SME Contracts</fullName>
                </value>
                <value>
                    <fullName>SME Coordinated Care Model</fullName>
                </value>
                <value>
                    <fullName>SME Data Interface Team (DIT)</fullName>
                </value>
                <value>
                    <fullName>SME DeCare</fullName>
                </value>
                <value>
                    <fullName>SME Dental</fullName>
                </value>
                <value>
                    <fullName>SME EAP</fullName>
                </value>
                <value>
                    <fullName>SME Enrollment and Billing (E/B)</fullName>
                </value>
                <value>
                    <fullName>SME Group Services</fullName>
                </value>
                <value>
                    <fullName>SME Health and Wellness Solutions</fullName>
                </value>
                <value>
                    <fullName>SME HealthEquity/WageWorks/FSA/COBRA</fullName>
                </value>
                <value>
                    <fullName>SME ID Cards</fullName>
                </value>
                <value>
                    <fullName>SME IHM</fullName>
                </value>
                <value>
                    <fullName>SME Implementations</fullName>
                </value>
                <value>
                    <fullName>SME Interplan</fullName>
                </value>
                <value>
                    <fullName>SME IT</fullName>
                </value>
                <value>
                    <fullName>SME JAA/NTS</fullName>
                </value>
                <value>
                    <fullName>SME Life and Disability</fullName>
                </value>
                <value>
                    <fullName>SME LITES CDH</fullName>
                </value>
                <value>
                    <fullName>SME Live Health Online</fullName>
                    <isActive>false</isActive>
                    <label>SME Live Health Online</label>
                </value>
                <value>
                    <fullName>SME Medical Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SME Approval Routing Logic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>SME_Department__c</columns>
        <columns>Active__c</columns>
        <columns>Criteria__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMERL-{0000}</displayFormat>
        <label>SME Approval Routing Logic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SME Approval Routing Logics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>